tests/test_struct/bad/nested.catala_en
## Article

```catala
declaration enumeration E:
  -- Empty
  -- Rec content E

declaration scope A:
  context y content E

scope A:
  definition y equals E.Empty
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] The type E is defined using itself, which is forbidden since Catala does not provide recursive types

┌─⯈ tests/test_struct/bad/nested.catala_en:6.17-18
└─┐
  │
6 │   -- Rec content E
  │                  ‾
  └─ Article
#return code 255#
```
